# tkgate

./: .hgignore  ChangeLog  ClassDiagram.dia  INSTALL  Makefile.am  Makefile.in  README  README.md  README.verga  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  gmac.1  options.h  pkg-descr  site-preferences  tkgate.1  tkgate.desktop  tkgate.xpm  verga.1
bindings/: emacs~  windows~
codeblocks/common/: common.cbp  common.depend  common.layout
codeblocks/gmac/: gmac.cbp  gmac.depend  gmac.layout
codeblocks/tkgate/: tkgate.cbp
codeblocks/verga/: verga.cbp  verga.depend
doc/: .hgignore  Makefile  index.html  index.xml  index.xsl  titlepage.xsl  tkgate.css
doc/docbook/: Makefile  index.xml  index.xsl  index_fo.xsl  titlepage.templates.xml
doc/en/: gateEdit.html  gateGmac.html  gateHDL.html  gateIntro.html  gateLibrary.html  gateModules.html  gateOptions.html  gateSim.html  gateTypeList.html  index.html  menagerie.html  menuList.html  simErrors.html  systemTasks.html  temp.html  toolbarList.html  verga.html  vpdCreation.html
doc/ru/: gateIntro.html  index.html
gdf/: default.gdf  default.gdf~  pat.gdf
images/: biggate.xbm  blk_claim.gif.orig  blk_close.gif.orig  blk_copy.gif.orig  blk_delete.gif.orig  blk_new.gif.orig  blk_open.gif.orig  blk_rename.gif.orig  cursor.config~  keypad.b  module.gif.orig  pulldown.b  pullup.b  tkgate.xpm
locale/: converting_test.sh  manuals.pot  manuals2pot.sh  messages.pot  messages2po.tcl  messages2pot.tcl  messages2test.sh  messages_converter.sh  po2manuals.sh  po2messages.sh  tkgate.pot  tkgatemsg2po.tcl  tkgatemsg2pot.tcl  tkgatepo2msg.sh  tkgatepo2msg.tcl
locale/ar/: ar.po  config.txt  license.txt  messages  messages_ar.po
locale/az/: az.po  config.txt  license.txt  messages  messages_az.po
locale/bg/: bg.po  config.txt  license.txt  messages  messages_bg.po
locale/ca/: ca.po  config.txt  license.txt  messages  messages_ca.po
locale/cs/: config.txt  cs.po  license.txt  manuals_cs.po  messages  messages.iso-8859-2  messages_cs.po
locale/cy/: config.txt  cy.po  license.txt  messages  messages_cy.po
locale/da/: config.txt  da.po  license.txt  messages  messages_da.po
locale/de/: config.txt  de.po  license.txt  manuals_de.po  messages  messages.bak  messages.bak2  messages.iso8859  messages_de.po
locale/en/: all.txt  license.txt  messages  messages.bak  messages.old  messages.orig  messages.rej  messages~  orig-messages
locale/es/: config.txt  es.po  license.txt  manuals_es.po  messages  messages.bak  messages.orig  messages.orig2  messages_es.po
locale/fr/: config.txt  fr.po  license.txt  messages  messages.bak  messages_fr.po
locale/gl/: config.txt  gl.po  license.txt  messages  messages_gl.po
locale/hr/: config.txt  hr.po  license.txt  messages  messages_hr.po
locale/id/: config.txt  id.po  license.txt  messages  messages_id.po
locale/is/: config.txt  is.po  license.txt  messages  messages_is.po
locale/it/: config.txt  it.po  license.txt  manuals_it.po  messages  messages_it.po
locale/ja/: config.txt  ja.po  license.txt  manuals_ja.po  messages  messages.backup  messages.bak  messages.euc  messages.orig  messages.utf8  messages.xxx  messages_ja.po  messages~  oldmessages.euc
locale/lt/: config.txt  license.txt  lt.po  messages  messages_lt.po
locale/ms/: config.txt  license.txt  messages  messages_ms.po  ms.po
locale/nl/: config.txt  license.txt  messages  messages_nl.po  nl.po
locale/oc/: config.txt  license.txt  messages  messages_oc.po  oc.po
locale/pl/: config.txt  license.txt  manuals_pl.po  messages  messages_pl.po  pl.po
locale/pt/: config.txt  license.txt  messages  messages_pt.po  pt.po
locale/pt_BR/: config.txt  license.txt  messages  messages_pt_BR.po  pt_BR.po
locale/ru/: all.txt  config.txt  license.txt  manuals_ru.po  messages  messages.old  messages_ru.po  orig-messages  ru.po  unused.txt
locale/sk/: config.txt  license.txt  messages  messages_sk.po  sk.po
locale/sr/: config.txt  license.txt  messages  messages_sr.po  sr.po
locale/sv/: config.txt  license.txt  messages  messages_sv.po  sv.po
locale/tr/: config.txt  license.txt  messages  tr.po  (+1 more)
povray/: arrow0.pov.orig  dragongate2.pov  memory_view.pov~
primitives/: adder.v  flipflop.v~  jkff.v  jkff.v~  or.v  ram.v~  register.v~  rom.v  rom.v~
scripts/: #print.tcl#  #print.tcl~#  action.tcl  action.tcl~  blocklist.tcl  blockops.tcl  blockops.tcl~  blocktree.tcl  breakpoint.tcl  circuit.tcl  circuit.tcl~  cpath.tcl  debug.tcl  dragger.tcl  dropbox.tcl  editgate.tcl  editgate.tcl~  errbox.tcl  errbox.tcl~  file.tcl  file.tcl~  find.tcl  frame.tcl  frame.tcl~  hdledit.tcl  hdledit.tcl~  helpon.tcl  indent.tcl  info.tcl  init.tcl  init.tcl~  ipanel.tcl  ipanel.tcl~  keys.tcl  keys.tcl~  library.tcl  library.tcl~  license.tcl  memview.tcl  memview.tcl~  (+46 more)
src/: Makefile.am  Makefile.in
src/common/: Makefile.am  Makefile.in  hash.c  hash.h  list.c  list.h  misc.c  misc.h  object.c  vparser.h  ycmalloc.c  ycmalloc.h
src/tkgate/: Makefile.am  Makefile.in  adder.c  and.c  arshift.c  ascii.c  block.c  breakpoint.c  breakpoint.h  buffer.c  circuit.c  circuit.h  clock.c  comment.c  comment.h  concat.c  cpath.c  cpath.h  cursors.c  decoder.c  delay.c  delay.h  demux.c  dip.c  divide.c  edit.c  editstate.c  editstate.h  elements.h  error.c  error.h  expr.c  expr.h  flipflop.c  fonts.c  fonts.h  frame.c  functions.c  functions.h  gate_painter.c  (+96 more)
src/tools/: Makefile.am  Makefile.in  README  colors.c  genmsg  msgdiff.c  mvtag.c
src/verga/: Makefile.am  Makefile.in  bytecode.c  bytecode.h  channel.c  channel.h  circuit.c  circuit.h  commands.c  directive.c  directive.h  dynitem.h  error.c  error.h  evqueue.c  evqueue.h  expr.c  expr.h  io.c  io.h  luthor.l  memory.c  memory.h  mitem.c  mitem.h  module.c  module.h  multint.c  multint.h  net.c  net.h  operators.c  operators.h  pathmod.c  paux.c  specify.c  specify.h  statement.c  statement.h  systask.c  (+14 more)
vlib/: 74xx.v  74xx.v~  74xxGateLevel.v  coke.v  coke.v~  foo.v~  m68xx.v  timer.v  timer.v~  timer.xv  tty.v  tty.v~
vpd/: coke.tcl  tty.tcl
(+376 files in other folders)
